--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "main": "./dist/locomotive-scroll.js",
     "module": "./dist/locomotive-scroll.esm.js",
     "devDependencies": {
+        "@babel/preset-env": "^7.11.0",
+        "@babel/register": "^7.10.5",
         "@modularbp/gulp": "^1.0.5",
         "@modularbp/gulp-build": "^1.0.1",
         "@modularbp/gulp-error": "^1.0.3",
